# OpenVEIL

./: .gitignore  CHANGES  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  VEILApiVersion.cmake.in
BuildTools/: CMakeLists.txt
BuildTools/Com2H/: CMakeLists.txt  com2h.cpp  com2h.rc.in
FileVEIL/: CMakeLists.txt  FileVEIL.cpp  FileVEIL.rc.in  resource.h  stdafx.h  targetver.h
SolutionItems/: BuildFrameworks.OpenVEIL.cmake.osx.in  BuildFrameworks.VEILCmsHeader.cmake.osx.in  BuildFrameworks.VEILCore.cmake.osx.in  BuildFrameworks.VEILFileSupport.cmake.osx.in  BuildFrameworks.VEILSmartCard.cmake.osx.in  BuildFrameworks.VEILWxWidgets.cmake.osx.in  OpenVEIL.list.osx.in  OpenVEILSDK.list.osx.in  VEILCmsHeader.list.osx.in  VEILCmsHeaderSDK.list.osx.in  VEILCore.list.osx.in  VEILCoreSDK.list.osx.in  VEILFileSupport.list.osx.in  VEILFileSupportSDK.list.osx.in  compilerconfig.h.in  (+8 more)
TextVEIL/: CMakeLists.txt  TextVEIL.cpp  TextVEIL.rc.in  stdafx.cpp  stdafx.h  targetver.h
VEILCmsHeader/: CMakeLists.txt  CmsHeader.cpp  CmsHeader.rc.in  CmsHeaderAndGroupImpl.cpp  CmsHeaderAndGroupImpl.h  CmsHeaderAttributeImpl.cpp  CmsHeaderAttributeImpl.h  CmsHeaderExtensionImpl.cpp  CmsHeaderExtensionImpl.h  CmsHeaderFiefdomImpl.cpp  CmsHeaderFiefdomImpl.h  CmsHeaderImpl.cpp  CmsHeaderImpl.h  resource.h  stdafx.h  targetver.h
VEILCmsHeader/static/: CMakeLists.txt
VEILCore/: Asn1CkmHeader.xasn  BasicVEILPreferences.cpp  CMakeLists.txt  CertificateValidator.cpp  CkmChangeMonitorImpl.cpp  CkmChangeMonitorImpl.h  CkmFileReader.cpp  CkmFileWriter.cpp  CkmMemoryFifoStream.cpp  CkmMemoryStream.cpp  CkmReadAppendFile.cpp  CkmReadWriteFile.cpp  CkmSymmetricAlgorithmImpl.h  ConvertUTF.cpp  ConvertUTF.h  CryptoAsn1.xasn  CryptoEvent.cpp  CryptoLocator.cpp  CryptoLocks.cpp  CryptoStringFuncs.cpp  CryptoUtf16.cpp  Endian.cpp  Favorite.cpp  FipsState.cpp  HttpChannel.cpp  HttpHeader.cpp  JsonChannel.cpp  KeyVEILConnector.cpp  KeyVEILSession.cpp  NotifyPropertyChange.cpp  OpaqueVEILCrypto.xasn  PluginModule.cpp  PluginModuleManager.cpp  PropertyChangedEventArgs.cpp  PropertyMap.cpp  RWLock.cpp  SSM.cpp  SymAlgs.cpp  TcpChannel.cpp  TcpChannel.h  (+54 more)
VEILCore/CryptoInterface/: AEAD.cpp  CkmAuthentication.cpp  DhKeyImpl.cpp  DhParametersImpl.cpp  Hash.cpp  KASImpl.cpp  KDF.cpp  KTSKEMKWS.cpp  KTSOAEP.cpp  KeyWrap.cpp  KeyWrap_RFC3217.cpp  Key_ECC.cpp  Key_Rsa.cpp  MAC_Handler.cpp  PbKdfImpl.cpp  Prime_Probable.cpp  Prime_Provable.cpp  RSAKAS1.cpp  RSAKAS2.cpp  RSASVEImpl.cpp  RSA_KEM_KWS.cpp  Rsa_OAEP.cpp  ServerAuthenticationCalculatorPbkdf.cpp  Sign_Ecc.cpp  Sign_Rsa.cpp  SymmetricStream.cpp  SymmetricWithModes.cpp  TunnelInitiator.cpp  XOF.cpp  XTS.cpp
VEILCore/SSL/: TLSClientHandshakeProtocol.cpp
VEILCore/include/: stdafx.h  targetver.h
VEILCore/static/: CMakeLists.txt  stdafx.cpp  stdafx.h
VEILFileSupport/: CMakeLists.txt  Compressor.cpp  CryptoHelperImpl.cpp  EncryptProcessor.cpp  FileOperations.cpp  FileOperations.h  FilePrimitives.cpp  FileVEILFileList.cpp  FileVEILFileList.h  VEILFileSupport.cpp  VEILFileSupport.def  VEILFileSupport.rc.in  VEILFileSupportFactory.cpp  VEILFileSupportFactory.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
VEILFileSupport/static/: CMakeLists.txt  stdafx.cpp  stdafx.h
VEILSmartCard/: CMakeLists.txt  CkmSmartCard.cpp  CkmSmartCard.rc.in  CkmWinscardConnectionImpl.cpp  CkmWinscardConnectionImpl.h  CkmWinscardContextImpl.cpp  CkmWinscardContextImpl.h  CkmWinscardEventImpl.cpp  CkmWinscardEventImpl.h  CkmWinscardMonitorImpl.cpp  CkmWinscardMonitorImpl.h  CkmWinscardReaderImpl.cpp  CkmWinscardReaderImpl.h  SmartCardConnection.cpp  SmartCardInformation.cpp  SmartCardLink.cpp  resource.h  stdafx.cpp  stdafx.h  targetver.h  tsWinscardSupport.cpp  tsWinscardSupport.h
VEILSmartCard/static/: CMakeLists.txt  stdafx.h
VEILWinAPI/: About.cpp  AttributeSelectorGrid.cpp  AudienceSelector.cpp  CMakeLists.txt  FavoriteName.cpp  HelpRegistry.cpp  KeyVEILLogin.cpp  ProgressDlg.cpp  PropertySheet.cpp  TSGrid.cpp  TSGrid.h  TSList.cpp  TSList.h  TokenLogIn.cpp  TokenSelector.cpp  VEILWinAPI.cpp  VEILWinAPI.rc.in  resource.h  stdafx.cpp  stdafx.h  targetver.h
VEILWxWidgets/src/: About.cpp  AttributeSelectorGrid.cpp  AttributeSelectorGridWrapper.cpp  AttributeSelectorGridWrapper.h  AudSelWizard.xcf  AudSelWizard3.xpm  AudSelWizard4.xpm  AudienceSelector.cpp  CMakeLists.txt  ChangeNameDlgWrapper.cpp  EnterPinDlgWrapper.cpp  FavoriteManagerWrapper.cpp  FavoriteManagerWrapper.h  FavoriteName.cpp  GeneralSettingsHandler.cpp  KeyVEILLogin.cpp  ProgressDlgWrapper.cpp  PropertySheet.cpp  TokenLogin.cpp  TokenSelector.cpp  VEILFileSettingsPage.cpp  VEILWxWidgets.cpp  VEILWxWidgets.rc.in  WxHelpRegistry.cpp  aboutckm.cpp  aboutckm.h  aboutckm.xrc  attributeselectorgrid.h  attributeselectorgrid.xrc  audienceselector2.cpp  audienceselector2.h  audienceselector2.xrc  audienceselector2Wrapper.cpp  audienceselector2Wrapper.h  audienceselectordlg.cpp  audienceselectordlg.h  audienceselectordlg.xrc  changenamedlg.cpp  changenamedlg.h  enterpindlg.cpp  (+38 more)
VEILWxWidgets/src/static/: CMakeLists.txt  stdafx.h
VEILWxWidgets/test/: AppMain.cpp  CMakeLists.txt  stdafx.cpp  stdafx.h
VEILWxWidgets/test/static/: CMakeLists.txt  stdafx.cpp  stdafx.h
unittests/: Asn1ParserTest.xasn  Asn1ParserTestImport.xasn  CMakeLists.txt  CkmHeaderDataTests.cpp  CkmHeaderTests.cpp  CodeGenTemplates.xasn  OCSPTests.cpp  TlvSerializerImportTests.cpp  TlvSerializerTests.cpp  stdafx.cpp  stdafx.h  targetver.h  testBaseCurve25519.cpp  tsCryptoStringTests.cpp  unittest1.cpp
veiltool/extensions/cts/: CMakeLists.txt  cts.rc.in  ctstool.cpp  getmyctstool.cpp  stdafx.cpp  stdafx.h
veiltool/extensions/keyveil/: CMakeLists.txt  getkeylisttool.cpp  keyveil.rc.in  kvGenKeyTool.cpp  kvKeyExportTool.cpp  kvKeyTool.cpp  kvtokenInfoTool.cpp  kvtokenListTool.cpp  kvtokensTool.cpp  kvtool.cpp  stdafx.cpp  stdafx.h
veiltool/extensions/smartcard/: AddAidTool.cpp  CMakeLists.txt  ChangeActPassword.cpp  ListAidTool.cpp  RemoveAidTool.cpp  SmartCardInfoTool.cpp  SmartCardMonitorTool.cpp  smartcard.cpp  smartcard.rc.in  stdafx.h  targetver.h
(+265 files in other folders)
